[package]
name = "pappapai-snn"
version = "0.3.0"
edition = "2021"
description = "World's First Living Spiking Neural Network Blockchain – Made in Vietnam"
license = "MIT"

[dependencies]
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
aes-gcm = "0.10"
zeroize = "1.8"
chrono = "0.4"
num_cpus = "1.16"
sys-info = "0.9"
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.19"
urlencoding = "2.1"
once_cell = "1.19"
hex = "0.4"
sha2 = "0.10"
futures-util = "0.3"

libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "ping", "tokio"] }

[features]
high-neuron-mode = []
